# FilmsSystem

./: films.db  main.py  pyproject.toml
core/: auth.py  config.py  security.py
database/: db.py  init_db.py  schema.sql
domain/: exceptions.py
domain/interfaces/: booking_repository.py  film_repository.py  session_repository.py  user_repository.py
repositories/: booking_repository.py  film_repository.py  hall_repository.py  session_repository.py  user_repository.py
routers/: auth.py  bookings.py  films.py  halls.py  sessions.py  views_router.py
schemas/: bookings.py  films.py  halls.py
services/: booking_service.py  film_service.py  session_service.py
